force-app/main/default/objects/SBQQ__PricingGuidance__c/fields/ATGExternalId__c.field-meta.xml
<CustomField>
        <fullName>ATGExternalId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>External ID for migration purposes</inlineHelpText>
        <label>ATGExternalId</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>