force-app/main/default/objects/SBQQ__PricingGuidance__c/fields/SBQQ__Description__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Description__c</fullName>
        <description>Description for this pricing guidance.</description>
        <inlineHelpText>Description for this pricing guidance.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </CustomField>