force-app/main/default/objects/SBQQ__PricingGuidance__c/fields/SBQQ__Explanation__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Explanation__c</fullName>
        <description>Provide sales reps with an explanation of this pricing guidance and recommendations for discounts to provide. They can view this explanation with the pricing guidance in the quote line editor.</description>
        <inlineHelpText>Provide sales reps with an explanation of this pricing guidance and recommendations for discounts to provide. They can view this explanation with the pricing guidance in the quote line editor.</inlineHelpText>
        <label>Explanation</label>
        <type>TextArea</type>
    </CustomField>