force-app/main/default/objects/SBQQ__PricingGuidance__c/fields/SBQQ__IncludePriorPurchases__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IncludePriorPurchases__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When setting the pricing guidance tier for a quote line, include product quantities that were sold earlier</description>
        <inlineHelpText>When setting the pricing guidance tier for a quote line, include product quantities that were sold earlier</inlineHelpText>
        <label>Include Prior Purchases</label>
        <type>Checkbox</type>
    </CustomField>