force-app/main/default/objects/SBQQ__PricingGuidance__c/fields/SBQQ__IsActive__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this pricing guidance for use on associated product. Inactive pricing guidance won&apos;t appear in the quote line editor.</description>
        <inlineHelpText>Enable this pricing guidance for use on associated product.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>