force-app/main/default/objects/SBQQ__PricingGuidance__c/fields/SBQQ__Summary__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Summary__c</fullName>
        <description>The parameters provided to create this pricing guidance.</description>
        <inlineHelpText>The parameters provided to create this pricing guidance.</inlineHelpText>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </CustomField>