force-app/main/default/objects/SBQQ__PricingGuidance__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Type__c</fullName>
        <description>Range: The guidance discounts using only the pricing guidance tier that applies to the quote line quantity.</description>
        <inlineHelpText>Range: The guidance discounts using only the pricing guidance tier that applies to the quote line quantity.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Range</fullName>
                    <default>true</default>
                    <label>Range</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>