force-app/main/default/objects/SBQQ__PricingGuidance__c/fields/SBQQ__Unit__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Unit__c</fullName>
        <description>Choose the type of discount that this pricing guidance applies to the quote line.</description>
        <inlineHelpText>Choose the type of discount that this pricing guidance applies to the quote line.</inlineHelpText>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>