force-app/main/default/objects/SBQQ__PricingGuidance__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
        <fullName>SBQQ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>